# Aardvark

./: .bazelrc  .gitignore  .travis.yml  Aardvark.podspec  AardvarkLoggingUI.podspec  AardvarkMailUI.podspec  AardvarkReveal.podspec  BUILD.bazel  CoreAardvark.podspec  Gemfile  LICENSE  MODULE.bazel  Package.swift  README.md
Aardvark/: ARKBugReporter.h  ARKDefaultLogFormatter.h  ARKDefaultLogFormatter.m  ARKEmailAttachment.h  ARKEmailAttachment.m  ARKEmailBugReportConfiguration.h  ARKEmailBugReportConfiguration.m  ARKEmailBugReportConfiguration_Protected.h  ARKEmailBugReporter.h  ARKEmailBugReporter.m  ARKEmailBugReporter_Testing.h  ARKIndividualLogViewController.h  ARKIndividualLogViewController.m  ARKLogDistributor+UIAdditions.h  ARKLogFormatter.h  ARKLogTableViewController.h  ARKLogTableViewController.m  ARKLogTableViewController_Testing.h  ARKLogType.h  ARKLogTypes.h  ARKLogging.h  ARKLogging.m  ARKScreenshotLogging.h  ARKScreenshotLogging.m  ARKScreenshotViewController.h  ARKScreenshotViewController.m  Aardvark.h  Aardvark.m  Aardvark.swift
Aardvark-Mac/: Aardvark-Mac.h  Info.plist
Aardvark.xcodeproj/: project.pbxproj
AardvarkTests/: ARKBugReporterTests.m  ARKDataArchiveTests.m  ARKDefaultLogFormatterTests.m  ARKDefineTests.m  ARKEmailBugReporterTests.m  ARKFileHandleAdditionsTests.m  ARKLogControllerTests.m  ARKLogDistributorTests.m  ARKLogFormatterTests.m  ARKLogStoreTests.m  ARKLogTableViewControllerTests.m  ARKURLAdditionsTests.m
AardvarkViewerMac/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
Bug Reporting/: ARKBugReporter.h  ARKDefaultLogFormatter.h  ARKDefaultLogFormatter.m  (+4 more)
(+280 files in other folders)
